# ais-simulator

./: .gitignore  AIVDM_Encoder.py  LICENSE  README.md  ais-simulator.grc  ais-simulator.py  package-lock.json  package.json  top_block.py  tsconfig.json  tslint.json  unpacker.c
gr-ais_simulator/: CMakeLists.txt  MANIFEST.md  README.md
gr-ais_simulator/.conda/: README.md
gr-ais_simulator/.conda/recipe/: meta.yaml
gr-ais_simulator/apps/: CMakeLists.txt
gr-ais_simulator/cmake/Modules/: ais_simulatorConfig.cmake  gnuradio-ais_simulatorConfig.cmake
gr-ais_simulator/docs/: CMakeLists.txt  README.ais_simulator
gr-ais_simulator/examples/: ais-transmitter.grc
gr-ais_simulator/grc/: CMakeLists.txt  ais_simulator_bitstring_to_frame.block.yml  ais_simulator_build_frame.block.yml  ais_simulator_websocket_pdu.block.yml
gr-ais_simulator/lib/: CMakeLists.txt  bitstring_to_frame_impl.cc  bitstring_to_frame_impl.h  build_frame_impl.cc  build_frame_impl.h  websocket_pdu_impl.cc  websocket_pdu_impl.h
gr-ais_simulator/python/: CMakeLists.txt  __init__.py  qa_build_frame.py
gr-ais_simulator/python/ais_simulator/bindings/: CMakeLists.txt  bitstring_to_frame_python.cc  failed_conversions.txt  python_bindings.cc  websocket_pdu_python.cc
gr-ais_simulator/python/ais_simulator/bindings/docstrings/: bitstring_to_frame_pydoc_template.h  websocket_pdu_pydoc_template.h
gr-ais_simulator/swig/: CMakeLists.txt  ais_simulator_swig.i
webapp/: ais-simulator.html  ais-simulator.ts  aivdm_encoder.ts  types.d.ts
webapp/assets/: ais-simulator.js  ais-simulator.js.map  aivdm_encoder.js  aivdm_encoder.js.map  styles.css
(+21 files in other folders)
